--- a/style.css
+++ b/style.css
@@ -15,19 +15,19 @@
 }
 
 @font-face {
-    font-family: 'Helvetica-Neue-Medium';
+    font-family: 'Helvetica-Neue';
     src: url('data/font/HelveticaNeue.ttc') format('truetype');
     font-weight: 500;
-    font-style: medium;
+    font-style: normal;
 }
-
 
 @font-face {
-    font-family: 'Helvetica-Neue-Bold';
+    font-family: 'Helvetica-Neue';
     src: url('data/font/HelveticaNeue.ttc') format('truetype');
     font-weight: 600;
-    font-style: bold;
+    font-style: normal;
 }
+
 
 
 /*Geral*/
@@ -54,13 +54,13 @@ p {
 }
 
 .bold {
-    font-family: 'Helvetica-Neue-Bold', sans-serif;
+    font-family: 'Helvetica-Neue', sans-serif;
     font-weight: 600;
-    font-weight: bold;
 }
 
 .medium {
-    font-family: 'Helvetica-Neue-Medium', sans-serif;
+    font-family: 'Helvetica-Neue', sans-serif;
+    font-weight: 500;
 }
 
 .grid {
