--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 body {
     background-color: var(--bg-color);
     color: var(--black);
+    overflow-x: hidden;
 }
 
 h1 {
@@ -149,7 +150,7 @@ footer p {
 }
 
 footer div:first-child {
-    grid-column: 2 / span 2;
+    grid-column: 3 / span 2;
 }
 
 footer div {
@@ -161,7 +162,9 @@ footer h1 {
     margin-bottom: 1rem;
 }
 
+@media only screen and (max-width: 1148px){
 
+}
 
 
 @media only screen and (max-width: 700px) {
