--- a/style.css
+++ b/style.css
@@ -9,21 +9,21 @@
 
 @font-face {
     font-family: 'Helvetica-Neue';
-    src: url('data/font/HelveticaNeue.ttc') format('truetype');
+    src: url('assets/data/font/HelveticaNeue-01.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Helvetica-Neue';
-    src: url('data/font/HelveticaNeue.ttc') format('truetype');
+    font-family: 'Helvetica-Neue-Medium';
+    src: url('assets/data/font/HelveticaNeue-Medium-11.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Helvetica-Neue';
-    src: url('data/font/HelveticaNeue.ttc') format('truetype');
+    font-family: 'Helvetica-Neue-Bold';
+    src: url('assets/data/font/HelveticaNeue-Bold-02.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
@@ -55,13 +55,11 @@ p {
 }
 
 .bold {
-    font-family: 'Helvetica-Neue', sans-serif;
-    font-weight: 600;
+    font-family: 'Helvetica-Neue-Bold', sans-serif;
 }
 
 .medium {
-    font-family: 'Helvetica-Neue', sans-serif;
-    font-weight: 500;
+    font-family: 'Helvetica-Neue-Medium', sans-serif !important;
 }
 
 .grid {
